tests/neg/i2853.scala
class A extends { }   // error
object A extends { }  // error